--- a/Test118/bin/AndroidManifest.xml
+++ b/Test118/bin/AndroidManifest.xml
@@ -28,8 +28,7 @@
     
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light.DarkActionBar" >
+        android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
         <activity
             android:name="com.views.MainActivity"
             android:screenOrientation="nosensor"
