Moved some classes to new packages to make the project neater, and did some minor changes.

--- a/Test118/AndroidManifest.xml
+++ b/Test118/AndroidManifest.xml
@@ -45,7 +45,7 @@
         </activity>
         <activity android:name="com.views.InputViaText" android:screenOrientation="nosensor">
         </activity>
-        <activity android:name="com.views.test" android:screenOrientation="nosensor">
+        <activity android:name="com.F5.test" android:screenOrientation="nosensor">
         </activity>
         <activity android:name="com.views.Success" android:screenOrientation="nosensor">
         </activity>
